--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react": "18.0.30",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
